# SystemProgramming

./: readme.txt
laba_1/: CMakeLists.txt  build.bat  createExe.bat  ~$ЛР1.docx
laba_1/CMake/: CMakeLists.txt  startW.bat
laba_1/CMake/bat/: build.bat  createExe.bat  startExe.bat
laba_1/CMake/lin/: startL.sh
laba_1/CMake/src/: main.c
laba_1/src/: main.c
laba_2/cmake/: CMakeLists.txt  start.bat
laba_2/cmake/src/: Lab-02a.c  Lab-02b.c  Lab-02c.c  Lab-02d.c  Lab-02inf.c  Lab-02x.c
laba_2/doc/: answers.docx  ЛР2.docx
laba_2/laba_2/: laba_2.sln
laba_2/laba_2/Lab-02b/: Lab-02b.c  Lab-02b.vcxproj
laba_2/laba_2/Lab-02c/: Lab-02c.c  Lab-02c.vcxproj
laba_2/laba_2/Lab-02d/: Lab-02d.c  Lab-02d.vcxproj
laba_2/laba_2/Lab-02hw/: Lab-02hw.c  Lab-02hw.vcxproj
laba_2/laba_2/Lab-02inf/: Lab-02inf.c  Lab-02inf.vcxproj
laba_2/laba_2/Lab-02x/: Lab-02x.c  Lab-02x.vcxproj
laba_2/laba_2/Lab-2a/: Lab-2a.c  Lab-2a.vcxproj  Lab-2a.vcxproj.filters
laba_2/lin/: CMakeLists.txt  start.sh
laba_2/lin/res/: Lab-02e  Lab-02x
laba_2/lin/sh/: numbStartX.sh  startE.sh  startX.sh
laba_2/lin/src/: .Lab-02e.c.swp  Lab-02e.c  Lab-02x.c
laba_3/: answers.docx
laba_3/cmake/: CMakeLists.txt  CreateCmd.bat
laba_3/cmake/src/: Lab-03a-client.c  Lab-03a-server.c  Lab-03b-client.c  Lab-03b-server.c
laba_3/lin/: CMakeLists.txt
laba_3/lin/src/: Lab-03b-client.c  Lab-03b-server.c
laba_4/: Answers.docx
laba_4/lin/: CMakeLists.txt
laba_5/: answers.docx  ЛР5.docx
laba_5/lin/: CMakeLists.txt
laba_5/win/: CMakeLists.txt
laba_6/: answers.docx  ЛР6.docx
laba_6/lin/: CMakeLists.txt  file.txt  linu.docx
laba_6/win/: CMakeLists.txt  bvje.txt
laba_7/: answers.docx  ЛР7.docx
laba_7/lin/: CMakeLists.txt
laba_7/win/: CMakeLists.txt  build.bat  file.txt
laba_8/: answers.docx  file.txt  ЛР8.docx  ЛР8base.docx
laba_8/lin-1/: CMakeLists.txt  build.sh
laba_8/lin-2/: CMakeLists.txt
laba_8/lin-2/dynamic-lib/include/: dynamic-lib.h
laba_8/lin-2/dynamic-lib/src/: CMakeLists.txt  dynamic-lib.c
laba_8/lin-2/main-project/src/: CMakeLists.txt  main-project.c
laba_8/win-1/: CMakeLists.txt
laba_8/win-2/: CMakeLists.txt  build.bat
laba_8/win-2/dynamic-def-lib/include/: dynamic-def-lib.h
laba_8/win-2/dynamic-def-lib/src/: CMakeLists.txt  dynamic-def-lib.c  dynamic-def-lib.def
laba_8/win-2/dynamic-lib/include/: dynamic-lib.h
laba_8/win-2/dynamic-lib/src/: CMakeLists.txt  dynamic-lib.c
laba_8/win-2/main-project/: CMakeLists.txt
laba_8/win-2/main-project/src/: CMakeLists.txt  main-project.c
laba_9/: answers.docx  ЛР9.docx
laba_9/lin/: CMakeLists.txt  build.sh  service09d.conf
laba_9/win/: AdminStart.bat  CMakeLists.txt
lection/: Лекция 10 - Сервисы.pptx  Лекция 5 - Управление процессами 3.pptx  Лекция 7 - Управление файлами.pptx
test/: test.sln
test/test/: test.c  test.vcxproj
(+173 files in other folders)
