cmake_minimum_required(VERSION 3.28)

# Включение заголовочных файлов библиотеки
# include_directories(${lab_8_SOURCE_DIR}/dynamic-lib/include)
# link_directories(${lab_8_SOURCE_DIR}/dynamic-lib/src)

# Создание исполняемого файла
add_executable(main-project main-project.c)

# Добавление библиотеки
# target_link_libraries(main-project dynamic-lib)

